--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,5 @@
 @import url(./bootstrap.min.css);
 @import url(./config.css);
-@import url(./Typography.css);
+@import url(./global.css);
 @import url(./custom.css);
 @import url(./responsive.css);
