--- a/css/global.css
+++ b/css/global.css
@@ -1,5 +1,4 @@
 h1{
-    padding-top: 10px;
     color: var(--secondary);
     text-align: center;
     font-size: 20px;
@@ -12,14 +11,21 @@ h2{
     font-size: 48px;
     font-weight: 800;
     margin: auto;
-    padding-bottom: 10px;
+}
+h3{
+    color: var(--secondary);
+    text-align: center;
+    margin: auto;
+    font-size: 16px;
+    font-weight: 600;
 }
 p{
     margin:auto;
     margin-bottom: 0;
-    padding-bottom: 5px;
-    padding-top: 10px;
     font-size: 9.6px;
     font-weight: 600;
-    color: #707070;
+    color: var(--tertiary);
+}
+p.total_finalizados{
+    padding-top: 10px;
 }
