--- a/css/custom.css
+++ b/css/custom.css
@@ -18,9 +18,7 @@
 .navicon{
     fill: blue;
 }
-header{
-    margin-bottom: 50px;
-}
+
 .green{
     background-color: #0C1C0C;
     border-radius: 10px;
@@ -66,7 +64,15 @@ header{
     background-color: var(--green);
 }
 
-
+.quadrado_header{
+    padding: 10px;
+    background-color: var(--primary);
+    width: 220px;
+    height: 60px;
+    border-radius: 16px;
+    text-align: center;
+    align-items: center;
+}
 .quadrado{
     padding: 10px;
     background-color: var(--primary);
@@ -75,6 +81,7 @@ header{
     border-radius: 16px;
     text-align: center;
     align-items: center;
+
 }
 .quadrado_tags{
     padding: 10px;
@@ -86,9 +93,19 @@ header{
     margin: auto;
     align-items: center;
 }
+.quadrado_historico{
+    padding: 10px 20px 0px 20px;
+    background-color: var(--primary);
+    width: 220px;
+    height: 160px;
+    border-radius: 16px;
+    text-align: center;
+    margin: auto;
+    align-items: center;
+}
 section{
-    padding-top: 7px;
-    padding-bottom: 7px;
+    padding-top: 3px;
+    padding-bottom: 3px;
 }
 .col-auto{
     padding: 0px;
@@ -146,3 +163,37 @@ section{
      align-items: center;
  }
 
+
+
+.form-select{
+    border-radius: 10px;
+    font-size: 15px;
+    font-weight: 500;
+    color: var(--secondary);
+    background-color: var(--primary);
+    margin-bottom: 20px;
+}
+option{
+    box-shadow: none;
+    outline: none;
+    font-size: 15px;
+    font-weight: 500;
+    color: var(--secondary);
+    background-color: var(--primary);
+}
+
+input{
+    background: var(--background);
+    border: none;
+    outline: none;
+    height: 50px;
+    width: 50px;
+    border-radius: 16px;
+}
+.salvar{
+    background-color: var(--green);
+    border-radius: 16px;
+    height: 50px;
+    width: 115px;
+    margin-left: 10px;
+}
