--- a/css/global.css
+++ b/css/global.css
@@ -5,6 +5,11 @@ h1{
     font-weight: 800;
     margin: auto;
 }
+input{
+    color: var(--secondary);
+    font-size: 15px;
+    font-weight: 700;
+}
 h2{
     color: var(--secondary);
     text-align: center;
@@ -29,3 +34,25 @@ p{
 p.total_finalizados{
     padding-top: 10px;
 }
+
+
+/* Works on Firefox */
+* {
+    scrollbar-width: thin;
+    scrollbar-color:  var(--secondary) var(--background);
+  }
+  
+  /* Works on Chrome, Edge, and Safari */
+  *::-webkit-scrollbar {
+    width: 12px;
+  }
+  
+  *::-webkit-scrollbar-track {
+    background: var(--background);
+  }
+  
+  *::-webkit-scrollbar-thumb {
+    background-color:  var(--secondary);
+    border-radius: 20px;
+    border: 3px solid var(--background);
+  }
