--- a/css/dark-mode.css
+++ b/css/dark-mode.css
@@ -1,6 +1,18 @@
 /*Tema Claro*/
 
-[data-theme="dark"] {
+
+[data-theme="dark"]{
+    --primary:#0D0D0D;
+    --secondary: #FFFFFF;
+    --tertiary: #707070;
+    --background: #202020;
+    --green: #70B200;
+    --blue: #0071B2;
+    --red: #E61800;
+    --orange: #E67100 ;
+}
+
+[data-theme="white"] {
     --primary:#FFFFFF;
     --secondary: #0D0D0D;
     --tertiary: #707070;
