Quality of life update.
The "change performed" notice has been changed to text within the History DIV.

The Reset Button has been moved to the bottom of the page.

Grammatical changes were made in the texts that were copied to the user in the tags' buttons.

--- a/css/global.css
+++ b/css/global.css
@@ -34,7 +34,14 @@ p{
 p.total_finalizados{
     padding-top: 10px;
 }
-
+p.alert{
+  padding-top: 10px;
+  margin:auto;
+  margin-bottom: 0;
+  font-size: 14px;
+  font-weight: 600;
+  color: var(--green);
+}
 
 /* Works on Firefox */
 * {
