--- a/css/homepage.css
+++ b/css/homepage.css
@@ -1,11 +1,12 @@
-bsody{
-    background: rgb(24,28,31);
-    background: linear-gradient(100deg, rgba(24,28,31,1) 0%, rgba(26,31,31,1) 31%, rgba(35,42,34,1) 69%, rgba(48,59,39,1) 100%);
+body{
+    background: url(/assets/clear-bg.jpg);
+    background-size: cover;
+    font-family: 'Poppins', sans-serif;
 }
 *{
     box-sizing: border-box;
     margin: 0;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Poppins', sans-serif;
 }
 
 .box{
@@ -27,21 +28,22 @@ bsody{
 
 .box-1{
     grid-area: box-1;
+    text-align: left;
 }
 .box-2{
     grid-area: box-2;
 }
 
 .title_homepage{
-    font-size: 100px;
+    font-size: 50px;
     text-align: left;
-    color: #81FE88;
+    color: #ff4800 ;
 }
 .subtitle_homepage{
     padding-top: 10px;
     font-weight: 400;
     text-align: left;
-    font-size: 20px;
+    font-size: 15px;
     color: white;
     padding-bottom: 50px;
 }
@@ -49,13 +51,27 @@ bsody{
 .btn_homepage{
     font-size: 20px;
     font-weight: 600;
-    border-radius: 25px;
+    border-radius: 5px;
     border-style: none;
-    color: var(--primary);
-    background: rgb(129,254,136);
-    background: linear-gradient(100deg, rgba(129,254,136,1) 0%, rgba(132,253,133,1) 28%, rgba(143,253,125,1) 51%, rgba(161,252,111,1) 76%, rgba(197,250,85,1) 95%);
+    color: var(--secondary);
+    background: #ff4800;
+
+    transition: .2s ease-in-out 0s;
 }
 
+
+
+
+.btn_homepage:hover{
+    cursor: pointer;
+    transform: scale(1.05);
+    background-color: white;
+    color: var(--primary);
+    
+}
+
+
 .img_home{
-    height: 600px;
+    padding-top: 80px;
+    height: 500px;
 }
