--- a/css/homepage.css
+++ b/css/homepage.css
@@ -2,21 +2,29 @@
     --primary:#0D0D0D;
     --secondary: #FFFFFF;
     --tertiary: #707070;
-    --background: #202020;
     --green: #70B200;
     --blue: #0071B2;
     --red: #E61800;
     --orange: #E67100 ;
 }
-
-html { 
-    background: url(/assets/clear-bg.jpg) no-repeat center center fixed; 
+html{ 
+    display: table;
+    width: 100%;
+    height: 100vh;
+    padding: 100px 0;
+    color: white;
+    background: url("../assets/clear.jpg") bottom center scroll;
+    background-repeat: no-repeat;
+    background-position: 30% 45%;
+    background-size: cover;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
   }
+
 body{
+    
     font-family: 'Poppins', sans-serif;
 }
 
@@ -50,7 +58,7 @@ body{
     color: var(--secondary);
 }
 
-.image {
+.img-animate {
     -webkit-animation:spin 4s linear infinite;
     -moz-animation:spin 4s linear infinite;
     animation:spin 180s linear infinite;
@@ -69,7 +77,7 @@ body{
     } 
 }
 
-.image:hover {
+.img-animate:hover {
     transition: 0.1s;
     transition-delay: 0.1s;
     filter: grayscale(100%);
