--- a/css/themes.css
+++ b/css/themes.css
@@ -4,9 +4,9 @@
     --tertiary: #707070;
     --background: #202020;
     --green: #70B200;
-    --blue: #0071B2;
+    --blue: #00b1eb;
     --red: #E61800;
-    --orange: #E67100;
+    --orange: #ff4800;
 }
 
 [data-theme="white"] {
@@ -14,6 +14,7 @@
     --secondary: #0D0D0D;
     --tertiary: #707070;
     --background: #e1e1e1;
+    --marine: #0071B2;
 }
 
 [data-theme="dracula"] {
@@ -25,4 +26,5 @@
     --blue: #8be9fd;
     --red: #ff5555;
     --orange: #ffb86c;
+    --marine: #8be9fd;
 }
