--- a/css/config.css
+++ b/css/config.css
@@ -1,12 +1,13 @@
 :root{
-    --primary:#0D0D0D;
+    --primary:#111;
     --secondary: #FFFFFF;
     --tertiary: #707070;
     --background: #202020;
-    --green: #70B200;
-    --blue: #0071B2;
-    --red: #E61800;
-    --orange: #E67100 ;
+    --green: #CCFF22;
+    --blue: #563cc7;
+    --red: #c21300;
+    --orange: #ff4800 ;
+    --marine: #090051;
 }
 * {
     margin: auto;
