--- a/css/global.css
+++ b/css/global.css
@@ -1,75 +1,114 @@
-h1{
-    color: var(--secondary);
-    text-align: center;
-    font-size: 20px;
-    font-weight: 800;
-    margin: auto;
+.flex-box {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
 }
-input{
+.flex-box2 {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-content: center;
+}
+body{
+    padding: 0px 10px 0px 10px;
+	background-color: var(--background);
+}
+.col-auto{
+    margin: 0px 10px 0px 10px auto;
+    padding: 0px;
+}
+/*
+font-family: 'Montserrat', sans-serif;
+font-family: 'Quicksand', sans-serif;
+font-famil
+
+/*Fonts */
+h1{
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: 600;
     color: var(--secondary);
-    font-size: 15px;
-    font-weight: 700;
+    margin: 0 auto;
 }
 h2{
-    color: var(--secondary);
     text-align: center;
-    font-size: 48px;
-    font-weight: 800;
-    margin: auto;
+    font-family: 'Montserrat', sans-serif;
+    color: var(--secondary);
+    margin: 0 auto;
 }
 h3{
-    color: var(--secondary);
     text-align: center;
-    margin: auto;
-    font-size: 16px;
+    font-family: 'Montserrat', sans-serif;
     font-weight: 600;
-}
-button{
-  color: var(--secondary);
-  text-align: center;
-  margin: auto;
-  font-size: 16px;
-  font-weight: 600;
-}
-button:hover::after{
-  color: var(--secondary);
+    color: var(--secondary);
+    font-size: 1rem;
+    margin: 0 auto;
 }
 p{
-    margin:auto;
-    margin-bottom: 0;
-    font-size: 9.6px;
+    text-align: center;
+    font-family: 'Quicksand', sans-serif;
     font-weight: 600;
-    color: var(--tertiary);
-}
-p.total_finalizados{
-    padding-top: 10px;
-}
-p.alert{
-  padding-top: 10px;
-  margin:auto;
-  margin-bottom: 0;
-  font-size: 14px;
-  font-weight: 600;
-  color: var(--green);
+    color: var(--secondary);
+    font-size: 0.6rem;
+    margin: 0 auto;
 }
 
-/* Works on Firefox */
-* {
-    scrollbar-width: thin;
-    scrollbar-color:  var(--secondary) var(--background);
+.accordion-button{
+    text-align: center;
+    font-family: 'Montserrat', sans-serif;
+    color: var(--secondary);
+    font-size: 0.9rem;
+    margin: 0 auto;
+}
+button{
+    text-align: center;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 600;
+    color: var(--secondary);
+    font-size: 0.9rem;
+    margin: 0 auto;
   }
-  
-  /* Works on Chrome, Edge, and Safari */
-  *::-webkit-scrollbar {
-    width: 12px;
+  button:hover::after{
+    color: var(--secondary);
   }
-  
-  *::-webkit-scrollbar-track {
-    background: var(--background);
-  }
-  
-  *::-webkit-scrollbar-thumb {
-    background-color:  var(--secondary);
-    border-radius: 20px;
-    border: 3px solid var(--background);
-  }
+.button{
+    margin-bottom: 10px;
+    border-radius: 5px;
+    border-style: none;
+    transition: .2s ease-in-out 0s;
+    padding: 7px 15px 7px 15px;
+    
+}
+.button:hover{
+    cursor: pointer;
+    transform: scale(1.05);
+    color: var(--primary);
+}
+option{
+    text-align: center;
+    font-family: 'Quicksand', sans-serif;
+    font-weight: 600;
+    color: var(--secondary);
+    font-size: 0.9rem;
+}
+
+/*ESPAÇAMENTOS */
+.btn_13h_remove{
+    margin-bottom: 15px;
+}
+#txt_total{
+    margin-top: 10px;
+    padding-bottom: 10px;
+}
+#localProd{
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+#timeText{
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+/*ESPAÇAMENTOS */
+
+
