--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,6 @@
-@import url(./bootstrap.min.css);
-@import url(./config.css);
-@import url(./global.css);
-@import url(./custom.css);
-@import url(./responsive.css);
-@import url(./themes.css);
+@import url(bootstrap.min.css);
+@import url(config.css);
+@import url(custom.css);
+@import url(global.css);
+@import url(responsive.css);
+@import url(themes.css);
