--- a/css/global.css
+++ b/css/global.css
@@ -18,6 +18,10 @@ body{
     margin: 0px 10px 0px 10px auto;
     padding: 0px;
 }
+
+.accordion{
+  max-width: 270px;
+}
 /*
 font-family: 'Montserrat', sans-serif;
 font-family: 'Quicksand', sans-serif;
@@ -37,7 +41,7 @@ h2{
     color: var(--secondary);
     margin: 0 auto;
 }
-h3{
+h3,input{
     text-align: center;
     font-family: 'Montserrat', sans-serif;
     font-weight: 600;
@@ -94,8 +98,8 @@ option{
 }
 
 /*ESPAÇAMENTOS */
-.btn_13h_remove{
-    margin-bottom: 15px;
+.bt-10{
+    margin-bottom: 10px;
 }
 #txt_total{
     margin-top: 10px;
@@ -112,3 +116,36 @@ option{
 /*ESPAÇAMENTOS */
 
 
+::-webkit-scrollbar {
+  width: 3px;
+  height: 3px;
+}
+::-webkit-scrollbar-button {
+  width: 0px;
+  height: 0px;
+}
+::-webkit-scrollbar-thumb {
+  background: #e1e1e1;
+  border: 0px none #ffffff;
+  border-radius: 50px;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #ffffff;
+}
+::-webkit-scrollbar-thumb:active {
+  background: #000000;
+}
+::-webkit-scrollbar-track {
+  background: #666666;
+  border: 0px none #ffffff;
+  border-radius: 50px;
+}
+::-webkit-scrollbar-track:hover {
+  background: #666666;
+}
+::-webkit-scrollbar-track:active {
+  background: #333333;
+}
+::-webkit-scrollbar-corner {
+  background: transparent;
+}
