--- a/css/responsive.css
+++ b/css/responsive.css
@@ -1,4 +1,7 @@
 @media(max-width:220px) {
+    div.accordion-body h3{
+        padding-bottom: 10px;
+    }
     .flex-box{
         flex-direction: column;
     }
